update: 修改profilke查询接口
